--- a/style.css
+++ b/style.css
@@ -177,42 +177,13 @@ body {
     border-radius: 5px;
 }
 
-/* Volume Control */
-.volume-control {
+input[type="range"] {
     width: 100%;
-    padding: 10px 20px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-top: 15px;
-}
-
-#volume-control {
-    width: 80%;
-    -webkit-appearance: none;
-    background: rgba(255, 255, 255, 0.2);
+    margin-top: 20px;
+    background: #1db954;
+    border-radius: 5px;
     height: 5px;
-    border-radius: 10px;
     outline: none;
-    transition: background 0.3s ease;
-}
-
-#volume-control::-webkit-slider-thumb {
-    -webkit-appearance: none;
-    appearance: none;
-    background: #1db954;
-    border-radius: 50%;
-    height: 20px;
-    width: 20px;
-    cursor: pointer;
-}
-
-#volume-control::-moz-range-thumb {
-    background: #1db954;
-    border-radius: 50%;
-    height: 20px;
-    width: 20px;
-    cursor: pointer;
 }
 
 /* Media Queries for Mobile */
